--- a/pqrs_backend/requirements.txt
+++ b/pqrs_backend/requirements.txt
@@ -1,4 +1,4 @@
-# Core Framework
+# Core
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
@@ -6,13 +6,12 @@ python-multipart==0.0.6
 # Database
 sqlalchemy==2.0.25
 alembic==1.13.1
-asyncpg==0.29.0  # PostgreSQL async driver
-psycopg2-binary==2.9.9  # PostgreSQL sync driver
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
 
-# Authentication & Security
+# Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
 cryptography==42.0.0
 
 # Validation
@@ -20,7 +19,7 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 email-validator==2.1.0
 
-# Environment Variables
+# Environment
 python-dotenv==1.0.0
 
 # Email
@@ -28,21 +27,19 @@ aiosmtplib==3.0.1
 fastapi-mail==1.4.1
 jinja2==3.1.3
 
-# File Handling
+# Files
 aiofiles==23.2.1
-python-magic==0.4.27
 
-# Export & Reports
+# Export
 openpyxl==3.1.2
 pandas==2.1.4
 reportlab==4.0.9
-fpdf2==2.7.7
 
-# Background Tasks
+# Tasks
 celery==5.3.6
 redis==5.0.1
 
-# HTTP Client (for testing)
+# HTTP
 httpx==0.26.0
 
 # Testing
@@ -51,25 +48,17 @@ pytest-asyncio==0.23.3
 pytest-cov==4.1.0
 faker==22.6.0
 
-# Code Quality
+# Quality
 black==24.1.1
 isort==5.13.2
 flake8==7.0.0
-pylint==3.0.3
 
-# Logging & Monitoring
+# Logging
 python-json-logger==2.0.7
 
-# CORS
-fastapi-cors==0.0.6
-
-# Utilities
+# Utils
 pytz==2023.3.post1
 python-dateutil==2.8.2
 
 # Rate Limiting
 slowapi==0.1.9
-
-# Documentation (included in FastAPI, but explicit)
-# swagger-ui-bundle
-# redoc
