logica de comentarios y notificaciones full empezando roles y permisos

--- a/pqrs_backend/.env
+++ b/pqrs_backend/.env
@@ -21,3 +21,128 @@ MAIL_FROM=tu-email@gmail.com
 MAIL_FROM_NAME=Sistema PQRS
 MAIL_TLS=True
 MAIL_SSL=False
+
+
+
+# ============================================================
+# CONFIGURACIÓN DE EMAIL - Sistema PQRS
+# ============================================================
+# Archivo: .env
+# 
+# Copia este archivo a la raíz de tu proyecto y configura
+# las variables según tu proveedor de email
+# ============================================================
+
+# === GMAIL (RECOMENDADO PARA PRUEBAS) ===
+# Pasos para configurar Gmail:
+# 1. Ve a: https://myaccount.google.com/apppasswords
+# 2. Genera una "App Password" (no uses tu contraseña normal)
+# 3. Usa esa App Password aquí
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=tu-email@gmail.com
+SMTP_PASSWORD=xxxx-xxxx-xxxx-xxxx  # App Password de Gmail
+SMTP_FROM_EMAIL=tu-email@gmail.com
+SMTP_FROM_NAME=Sistema PQRS
+SMTP_USE_TLS=True
+SMTP_USE_SSL=False
+
+# === OUTLOOK / HOTMAIL ===
+# SMTP_HOST=smtp-mail.outlook.com
+# SMTP_PORT=587
+# SMTP_USER=tu-email@outlook.com
+# SMTP_PASSWORD=tu-contraseña
+# SMTP_FROM_EMAIL=tu-email@outlook.com
+# SMTP_FROM_NAME=Sistema PQRS
+# SMTP_USE_TLS=True
+# SMTP_USE_SSL=False
+
+# === OFFICE 365 (EMPRESAS) ===
+# SMTP_HOST=smtp.office365.com
+# SMTP_PORT=587
+# SMTP_USER=tu-email@tuempresa.com
+# SMTP_PASSWORD=tu-contraseña
+# SMTP_FROM_EMAIL=tu-email@tuempresa.com
+# SMTP_FROM_NAME=Sistema PQRS - Tu Empresa
+# SMTP_USE_TLS=True
+# SMTP_USE_SSL=False
+
+# === SERVIDOR SMTP PERSONALIZADO ===
+# SMTP_HOST=mail.tudominio.com
+# SMTP_PORT=587  # o 465 para SSL
+# SMTP_USER=notificaciones@tudominio.com
+# SMTP_PASSWORD=tu-contraseña-segura
+# SMTP_FROM_EMAIL=notificaciones@tudominio.com
+# SMTP_FROM_NAME=Sistema PQRS - Tu Empresa
+# SMTP_USE_TLS=True  # True para puerto 587
+# SMTP_USE_SSL=False  # True para puerto 465
+
+# === URLs DEL SISTEMA ===
+FRONTEND_URL=http://localhost:4200
+BACKEND_URL=http://localhost:8000
+
+# === CONTROL DE ENVÍO ===
+# Habilitar/deshabilitar envío de emails
+EMAIL_ENABLED=True  # False para desactivar completamente
+
+# === MODO DE PRUEBA (OPCIONAL) ===
+# Cuando está activado, todos los emails se redirigen a EMAIL_TEST_ADDRESS
+# Útil para testing sin enviar emails reales
+EMAIL_TEST_MODE=False  # True para activar modo de prueba
+EMAIL_TEST_ADDRESS=pruebas@tuempresa.com  # Solo si EMAIL_TEST_MODE=True
+
+# === CONFIGURACIÓN AVANZADA (OPCIONAL) ===
+EMAIL_MAX_RETRIES=3  # Intentos de reenvío en caso de fallo
+EMAIL_RETRY_DELAY=60  # Segundos entre reintentos
+
+# ============================================================
+# OTRAS CONFIGURACIONES DEL SISTEMA
+# ============================================================
+
+# Base de datos
+DATABASE_URL=postgresql+asyncpg://pqrs_user:password@localhost/pqrs_db
+
+# JWT
+SECRET_KEY=tu-clave-secreta-muy-segura-aqui
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# ============================================================
+# NOTAS IMPORTANTES
+# ============================================================
+
+# GMAIL:
+# - Debes usar "App Password", no tu contraseña normal
+# - Si ves error "Username and Password not accepted", activa 2FA primero
+# - Link: https://support.google.com/accounts/answer/185833
+
+# OUTLOOK/HOTMAIL:
+# - Puedes usar tu contraseña normal
+# - Si falla, verifica configuración de "Aplicaciones menos seguras"
+
+# OFFICE 365:
+# - Contacta a tu administrador de IT si tienes problemas
+# - Algunos servidores requieren autenticación OAuth2
+
+# SERVIDOR PERSONALIZADO:
+# - Puerto 587: TLS (SMTP_USE_TLS=True, SMTP_USE_SSL=False)
+# - Puerto 465: SSL (SMTP_USE_TLS=False, SMTP_USE_SSL=True)
+# - Puerto 25: Sin encriptación (no recomendado)
+
+# TROUBLESHOOTING:
+# - Error "Connection refused": Verifica SMTP_HOST y SMTP_PORT
+# - Error "Authentication failed": Verifica SMTP_USER y SMTP_PASSWORD
+# - Error "TLS/SSL": Verifica SMTP_USE_TLS y SMTP_USE_SSL
+# - Email no llega: Revisa spam/correo no deseado
+
+# TESTING:
+# 1. Configura EMAIL_TEST_MODE=True
+# 2. Configura EMAIL_TEST_ADDRESS con tu email de prueba
+# 3. Todos los emails se enviarán a ese email
+# 4. El asunto incluirá el destinatario original
+
+# PRODUCCIÓN:
+# 1. Configura EMAIL_TEST_MODE=False
+# 2. Verifica que SMTP_FROM_EMAIL sea profesional
+# 3. Monitorea notification_logs para ver tasa de éxito
