--- a/pqrs_backend/requirements.txt
+++ b/pqrs_backend/requirements.txt
@@ -1,45 +1,43 @@
-# Core
+# Framework principal
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 
-# Database
+# Base de datos
 sqlalchemy==2.0.25
 alembic==1.13.1
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 
-# Security
+# Autenticación y seguridad
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 cryptography==42.0.0
+python-dotenv==1.0.0
 
-# Validation
+# Validación
 pydantic==2.5.3
 pydantic-settings==2.1.0
 email-validator==2.1.0
 
-# Environment
-python-dotenv==1.0.0
-
 # Email
-aiosmtplib==3.0.1
+aiosmtplib==2.0.2
 fastapi-mail==1.4.1
 jinja2==3.1.3
 
-# Files
+# Archivos
 aiofiles==23.2.1
 
-# Export
+# Excel y reportes
 openpyxl==3.1.2
 pandas==2.1.4
 reportlab==4.0.9
 
-# Tasks
+# Tareas asíncronas
 celery==5.3.6
 redis==5.0.1
 
-# HTTP
+# HTTP client
 httpx==0.26.0
 
 # Testing
@@ -48,17 +46,10 @@ pytest-asyncio==0.23.3
 pytest-cov==4.1.0
 faker==22.6.0
 
-# Quality
+# Code quality
 black==24.1.1
 isort==5.13.2
 flake8==7.0.0
 
 # Logging
 python-json-logger==2.0.7
-
-# Utils
-pytz==2023.3.post1
-python-dateutil==2.8.2
-
-# Rate Limiting
-slowapi==0.1.9
